fix: blog item tags now wrap

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -113,6 +113,7 @@ body {
 				margin-top: 0.3 rem;
 				margin-bottom: 0.5rem;
 				display: flex;
+				flex-wrap: wrap;
 				gap: 0.2rem;
 				button {
 					font-size: 0.7rem;
